# schemabear

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  START_HERE.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
crates/er-core/: Cargo.toml  README.md
crates/er-core/examples/: export_mermaid.rs  export_sample.rs
crates/er-core/src/: dbml.rs  error.rs  layout.rs  lib.rs  mermaid.rs  model.rs  sample.rs  validate.rs
crates/er-core/tests/: infor_sample.rs  mohg_sample.rs
docs/: BUILD_WINDOWS.md
examples/: infor_hms_sample.dbml  mohg_hms_sample.dbml  mohg_hms_sample.roundtrip.mmd
fixtures/: infor_hms_sample.mmd  mohg_hms_sample.mmd
memory/: ACTIVE_CONTEXT.md  CONTEXT_RETRIEVAL_POLICY.md  INDEX.md  context_manifest.yml
memory/topics/: er_diagram_product.md  harness_bootstrap.md
scripts/: smoke_er_core.sh
src/: main.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/canvas/: renderer.ts
src/lib/: api.ts
tasks/: todo.md
