[package]
name = "er-diagram"
version = "0.1.4"
description = "Small, efficient ER diagram studio for macOS (Apple Silicon)"
authors = ["843-Pi Contributors"]
edition = "2021"
license = "MIT"
default-run = "er-diagram"

[lib]
name = "er_diagram_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
er-core = { path = "../crates/er-core" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
