[package]
name = "schemabear"
version = "0.1.6"
description = "SchemaBear — small, efficient ER diagram studio by flyingbear"
authors = ["flyingbear <https://github.com/flyingbearHK>"]
edition = "2021"
license = "MIT"
default-run = "schemabear"
repository = "https://github.com/flyingbearHK/schemabear"

[lib]
name = "schemabear_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
er-core = { path = "../crates/er-core" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
