[package]
name = "er-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Entity-relationship diagram model, Mermaid/DBML interchange, and layout for SchemaBear"
authors = ["flyingbear <https://github.com/flyingbearHK>"]
repository = "https://github.com/flyingbearHK/schemabear"
readme = "README.md"
keywords = ["er-diagram", "mermaid", "dbml", "data-model", "schemabear"]
categories = ["parser-implementations", "visualization"]

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
pretty_assertions = "1"
